--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.Archy-X:SmartInvs:1.3.0'
+    compile 'com.github.Archy-X:SmartInvs:1.3.0'
     implementation 'com.github.cryptomorin:XSeries:8.1.0'
     implementation 'de.tr7zw:item-nbt-api:2.8.0'
     implementation 'dev.dbassett:skullcreator:3.0.1'
