--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.github.cryptomorin:XSeries:8.6.1'
     implementation 'de.tr7zw:item-nbt-api:2.8.0'
     implementation 'dev.dbassett:skullcreator:3.0.1'
+    implementation "net.kyori:adventure-text-minimessage:4.11.0"
+    implementation "net.kyori:adventure-platform-bukkit:4.1.2"
     compileOnly 'org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.10'
 }
