--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'com.github.johnrengelman.shadow'
+
 group = 'com.archyx'
 version = '1.0.0'
 
@@ -46,9 +50,26 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.10.10'
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
 shadowJar {
+    archiveName = "$baseName-$version.$extension"
     relocate 'net.kyori.adventure', 'com.archyx.slate.adventure'
     relocate 'net.kyori.examination', 'com.archyx.slate.examination'
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+    archives shadowJar
 }
 
 processResources {
