--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,11 @@ import org.apache.tools.ant.filters.ReplaceTokens
 plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'java'
+    id 'maven-publish'
 }
 
 apply plugin: 'java'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 group = 'com.archyx'
@@ -40,10 +41,10 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.Archy-X:SmartInvs:1.3.0'
-    implementation 'com.github.cryptomorin:XSeries:8.6.1'
-    implementation 'de.tr7zw:item-nbt-api:2.8.0'
-    implementation 'dev.dbassett:skullcreator:3.0.1'
+    compileOnly 'com.github.Archy-X:SmartInvs:1.3.0'
+    compileOnly 'com.github.cryptomorin:XSeries:8.6.1'
+    compileOnly 'de.tr7zw:item-nbt-api:2.8.0'
+    compileOnly 'dev.dbassett:skullcreator:3.0.1'
     implementation "net.kyori:adventure-text-minimessage:4.11.0"
     implementation "net.kyori:adventure-platform-bukkit:4.1.2"
     compileOnly 'org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT'
