--- a/build.gradle
+++ b/build.gradle
@@ -42,9 +42,9 @@ dependencies {
     implementation('com.github.Archy-X:SmartInvs:1.3.0') {
         exclude group: 'org.spigotmc'
     }
-    compileOnly 'com.github.cryptomorin:XSeries:8.6.1'
-    compileOnly 'de.tr7zw:item-nbt-api:2.8.0'
-    compileOnly 'dev.dbassett:skullcreator:3.0.1'
+    implementation 'com.github.Archy-X:XSeries:887fe61174'
+    implementation 'de.tr7zw:item-nbt-api:2.10.0'
+    implementation 'dev.dbassett:skullcreator:3.0.1'
     implementation "net.kyori:adventure-text-minimessage:4.11.0"
     implementation "net.kyori:adventure-platform-bukkit:4.1.2"
     compileOnly 'org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT'
