--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'java'
+    id 'java-library'
 }
 
 apply plugin: 'java'
