--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
     id 'java-library'
 }
@@ -38,6 +38,7 @@ repositories {
 }
 
 dependencies {
+    implementation("org.spongepowered:configurate-yaml:4.1.2")
     implementation('com.github.Archy-X:SmartInvs:5e842f3108') {
         exclude group: 'org.spigotmc'
     }
@@ -46,30 +47,16 @@ dependencies {
     implementation "net.kyori:adventure-text-minimessage:4.11.0"
     implementation "net.kyori:adventure-platform-bukkit:4.1.2"
     compileOnly 'de.tr7zw:item-nbt-api:2.11.3'
-    compileOnly 'org.spigotmc:spigot-api:1.19.4-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.10'
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
 shadowJar {
-    archiveName = "$baseName-$version.$extension"
+    archiveFileName.set("slate-${projectVersion}.jar")
     relocate 'net.kyori.adventure', 'com.archyx.slate.adventure'
     relocate 'net.kyori.examination', 'com.archyx.slate.examination'
 }
 
 artifacts {
-    archives sourcesJar
-    archives javadocJar
     archives shadowJar
 }
-
-build.dependsOn shadowJar
