--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     compileOnly 'de.tr7zw:item-nbt-api:2.11.3'
     compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.10'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 shadowJar {
