--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,6 @@ plugins {
     id 'java-library'
 }
 
-apply plugin: 'java'
-apply plugin: 'com.github.johnrengelman.shadow'
-
 group = 'com.archyx'
 version = '1.0.0'
 
@@ -39,9 +36,7 @@ repositories {
 
 dependencies {
     implementation("org.spongepowered:configurate-yaml:4.1.2")
-    implementation('com.github.Archy-X:SmartInvs:5e842f3108') {
-        exclude group: 'org.spigotmc', module: 'spigot-api'
-    }
+    implementation('com.github.Archy-X:SmartInvs:f77ddde177')
     implementation 'com.github.Archy-X:XSeries:887fe61174'
     implementation 'dev.dbassett:skullcreator:3.0.1'
     implementation "net.kyori:adventure-text-minimessage:4.11.0"
