--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,8 @@ dependencies {
     implementation('com.github.Archy-X:SmartInvs:f77ddde177')
     implementation 'com.github.Archy-X:XSeries:887fe61174'
     implementation 'dev.dbassett:skullcreator:3.0.1'
-    implementation "net.kyori:adventure-text-minimessage:4.11.0"
-    implementation "net.kyori:adventure-platform-bukkit:4.1.2"
+    compileOnly "net.kyori:adventure-text-minimessage:4.11.0"
+    compileOnly "net.kyori:adventure-platform-bukkit:4.1.2"
     compileOnly 'de.tr7zw:item-nbt-api:2.11.3'
     compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.10'
@@ -47,8 +47,6 @@ dependencies {
 
 shadowJar {
     archiveFileName.set("slate-${projectVersion}.jar")
-    relocate 'net.kyori.adventure', 'com.archyx.slate.adventure'
-    relocate 'net.kyori.examination', 'com.archyx.slate.examination'
 }
 
 artifacts {
