--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,10 @@ dependencies {
     implementation('com.github.Archy-X:SmartInvs:f77ddde177')
     implementation 'com.github.Archy-X:XSeries:887fe61174'
     implementation 'dev.dbassett:skullcreator:3.0.1'
-    implementation("net.kyori:adventure-text-minimessage:4.14.0")
-    implementation("net.kyori:adventure-platform-bukkit:4.3.2")
+    compileOnly("net.kyori:adventure-text-minimessage:4.14.0")
+    compileOnly("net.kyori:adventure-platform-bukkit:4.3.2")
     compileOnly 'de.tr7zw:item-nbt-api:2.11.3'
-    compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.10'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
@@ -47,8 +47,6 @@ dependencies {
 
 shadowJar {
     archiveFileName.set("slate-${projectVersion}.jar")
-
-    relocate("net.kyori", "com.archyx.slate.kyori")
 }
 
 artifacts {
