--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ repositories {
 }
 
 dependencies {
-    implementation("org.spongepowered:configurate-yaml:4.1.2")
-    implementation('com.github.Archy-X:SmartInvs:f77ddde177')
-    implementation 'com.github.Archy-X:XSeries:887fe61174'
-    implementation 'dev.dbassett:skullcreator:3.0.1'
+    implementation("com.github.Archy-X:SmartInvs:f77ddde177")
+    implementation("com.github.Archy-X:XSeries:887fe61174")
+    implementation("dev.dbassett:skullcreator:3.0.1")
+    compileOnly("org.spongepowered:configurate-yaml:4.1.2")
     compileOnly("net.kyori:adventure-text-minimessage:4.14.0")
     compileOnly("net.kyori:adventure-platform-bukkit:4.3.2")
     compileOnly 'de.tr7zw:item-nbt-api:2.11.3'
